tests/error/struct_arrow_on_non_pointer.vbc
// 预期：对非指针类型使用 '->' 应报类型错误

struct Point {
    int x;
    int y;
};

int main() {
    struct Point p;
    p->x = 1;
    return 0;
}

main();
